# self-driving-car

./: Makefile  README.md
arduino/: CMakeLists.txt  README.md
arduino/include/: motor_commands.h  pins.h
arduino/main/: CMakeLists.txt  main.ino  motor_commands.cpp  motor_commands.h  pins.h
arduino/src/: main.ino  motor_commands.cpp
arduino/tests/: CMakeLists.txt  motor_commands_tests.cpp
ros2-modules/: README.md
ros2-modules/common/: CMakeLists.txt  README.md  package.xml
ros2-modules/common/include/common/: base_pub_sub_node.h  base_publish_node.h
ros2-modules/common/src/: base_pub_sub_node.cpp  base_publish_node.cpp
ros2-modules/interfaces/: CMakeLists.txt  package.xml
ros2-modules/interfaces/msg/: MotionVector.msg
ros2-modules/lane-detection/: CMakeLists.txt  README.md  package.xml
ros2-modules/lane-detection/include/lane-detection/: lane.h  lane_detection.h  lane_detection_module.h  ros_module.h
ros2-modules/lane-detection/src/: lane.cpp  lane_detection.cpp  lane_detection_app.cpp  lane_detection_module.cpp  main.cpp  ros_module.cpp  shell_app.cpp
ros2-modules/lane-detection/tests/: lane_detection_module_tests.cpp  lane_tests.cpp
ros2-modules/line-detection/: CMakeLists.txt  package.xml
ros2-modules/line-detection/include/line-detection/: lane.h  lane_detection_module.h  line_detection.h
ros2-modules/line-detection/python-tests/: test_hough_line_transform.py
ros2-modules/line-detection/src/: lane.cpp  lane_detection_module.cpp  line_detection.cpp  line_detection_module.cpp  main.cpp  shell_app.cpp
ros2-modules/line-detection/tests/: lane_detection_module_tests.cpp  lane_tests.cpp  line_detection_module_tests.cpp
ros2-modules/main-pipeline/: CMakeLists.txt  README.md  package.xml
ros2-modules/main-pipeline/include/main-pipeline/: main_pipeline.h  ros_module.h
ros2-modules/main-pipeline/src/: main.cpp  main_pipeline.cpp  ros_module.cpp
ros2-modules/manual-control/: CMakeLists.txt  README.md  package.xml
ros2-modules/manual-control/include/manual-control/: manual_control.h
ros2-modules/manual-control/include/manual-control/network/: i_socket.h  socket.h  tcp_server.h
ros2-modules/manual-control/include/network/: command.h  tcp_client.h
ros2-modules/manual-control/src/: main.cpp  manual_control.cpp  manual_control_app.cpp  ros_module.cpp
ros2-modules/manual-control/src/network/: socket.cpp  tcp_client.cpp  tcp_server.cpp
ros2-modules/manual-control/tests/: tcp_client_tests.cpp  tcp_server_tests.cpp
ros2-modules/motion-calibration/: CMakeLists.txt  README.md  package.xml
ros2-modules/motion-calibration/include/motion-calibration/: digital_values.h  motion_calibration.h  motion_planner.h  motor_commands.h  pins.h  ros_module.h
ros2-modules/motion-calibration/src/: digital_values.cpp  main.cpp  motion_calibration.cpp  motion_planner.cpp  ros_module.cpp
ros2-modules/motion-calibration/tests/: backward_motion_tests.cpp  digital_values_tests.cpp  forward_motion_tests.cpp  left_motion_tests.cpp  motion_calibration_tests.cpp  right_motion_tests.cpp
ros2-modules/obstacle-avoidance/: CMakeLists.txt  README.md  package.xml
ros2-modules/obstacle-avoidance/include/obstacle-avoidance/: obstacle_avoidance.h
ros2-modules/obstacle-avoidance/src/: main.cpp  obstacle_avoidance.cpp
ros2-modules/path-planning/: CMakeLists.txt  README.md  package.xml
ros2-modules/path-planning/include/path-planning/: path_planning.h
ros2-modules/path-planning/src/: main.cpp  path_planning.cpp
ros2-modules/remote-control/: CMakeLists.txt  README.md  package.xml
ros2-modules/remote-control/include/remote-control/: remote_control_client.h  remote_control_commands.h  remote_control_server.h
ros2-modules/remote-control/include/remote-control/network/: i_socket.h  socket.h  tcp_client.h  tcp_server.h
ros2-modules/remote-control/include/remote-control/remote-control/: client.h  commands.h  server.h
ros2-modules/remote-control/src/: main.cpp  remote_control_app.cpp  remote_control_client.cpp  remote_control_commands.cpp  remote_control_server.cpp
ros2-modules/remote-control/src/network/: socket.cpp  tcp_client.cpp  tcp_server.cpp
ros2-modules/remote-control/src/remote-control/: app.cpp  client.cpp  commands.cpp  server.cpp
ros2-modules/remote-control/test_data/: commands.json
ros2-modules/remote-control/tests/: client_tests.cpp  remote_control_client_tests.cpp  remote_control_server_tests.cpp  server_tests.cpp  tcp_client_tests.cpp  tcp_server_tests.cpp
slam/: CMakeLists.txt  Makefile
slam/src/: CMakeLists.txt  a_star.cpp  a_star.hpp  i_map.cpp  i_map.hpp  i_path_finder.cpp  i_path_finder.hpp
slam/tests/: CMakeLists.txt  astar_tests.cpp
